# app/api-v1/api-doc.yaml
@@ -5,13 +5,13 @@ info:
   version: 0.1.0
 servers:
   - url: https://pokemon-auto-chess.com/v1
-    description:  Main server
+    description: Main server
   - url: http://localhost:9000/v1
     description: Local server
 paths:
   /history/gameById/{id}:
     get:
-      operationId: 'getGameById'
+      operationId: "getGameById"
       summary: Returns a game by id.
       parameters:
         - name: id
@@ -21,79 +21,79 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Game informations about the request game id
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GameHistory'
-        '400':
+                $ref: "#/components/schemas/GameHistory"
+        "400":
           description: The specified id is invalid (not a string).
-        '404':
+        "404":
           description: No game found with the specific id.
         default:
           description: Unexpected error
   /history/gamesByName/{name}:
     get:
-      operationId: 'getGamesByName'
+      operationId: "getGamesByName"
       summary: Return an array of games by name.
       parameters:
-        - name : name
+        - name: name
           in: path
           required: true
           description: The name of the game to return.
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Game informations about the request game id
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/GameHistory'
-        '400':
+                  $ref: "#/components/schemas/GameHistory"
+        "400":
           description: The specified name is invalid (not a string).
-        '404':
+        "404":
           description: A user with the specified ID was not found.
         default:
           description: Unexpected error
   /history/gamesByTime:
     get:
-      operationId: 'getGamesByTime'
+      operationId: "getGamesByTime"
       summary: Return an array of games that were played between startTime and endTime.
       parameters:
-        - name : startTime
+        - name: startTime
           in: query
           required: true
           description: The startTime (in UNIX Epoch) threshold
           schema:
             type: number
-        - name : endTime
+        - name: endTime
           in: query
           required: true
           description: The endtime (in UNIX Epoch) threshold
           schema:
             type: number
       responses:
-        '200':
+        "200":
           description: Game informations about the request game id
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/GameHistory'
-        '400':
+                  $ref: "#/components/schemas/GameHistory"
+        "400":
           description: The specified startTime or endTime is invalid
-        '404':
+        "404":
           description: No games found between startTime and endTime
         default:
           description: Unexpected error
   /game/create/{name}:
     get:
-      operationId: 'createGame'
+      operationId: "createGame"
       summary: Create a preparation room with the given name.
       parameters:
         - name: name
@@ -103,7 +103,7 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Game informations about the request game id
           content:
             application/json:
@@ -116,13 +116,13 @@ paths:
                   id:
                     type: string
                     description: the id of the created preparation room
-        '400':
+        "400":
           description: The specified name was invalid.
-        '404':
+        "404":
           description: The preparation room was not created.
   /game/status/{id}:
     get:
-      operationId: 'getGameStatus'
+      operationId: "getGameStatus"
       summary: Returns a game status by id
       parameters:
         - name: id
@@ -132,7 +132,7 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Game informations about the request game id
           content:
             application/json:
@@ -149,10 +149,10 @@ paths:
                     type: array
                     description: The current list of players
                     items:
-                      $ref: '#/components/schemas/Player'
-        '400':
+                      $ref: "#/components/schemas/Player"
+        "400":
           description: The specified name was invalid.
-        '404':
+        "404":
           description: The preparation room was not created.
 components:
   schemas:
@@ -202,14 +202,14 @@ components:
                 description: The player name when the game was played
               elo:
                 type: number
-                description: The elo of the player at the end of the game  
+                description: The elo of the player at the end of the game
               rank:
                 type: number
                 description: The rank of the player at the end of the game
               pokemons:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Pokemon'
+                  $ref: "#/components/schemas/Pokemon"
     Player:
       type: object
       properties:
@@ -225,5 +225,3 @@ components:
         elo:
           type: number
           description: The player elo
-              
-        
