# app/models/shop.ts
@@ -1,14 +1,22 @@
 import PokemonFactory from "./pokemon-factory"
 import { Pkm, PkmFamily } from "../types/enum/Pokemon"
 import Player from "./colyseus-models/player"
-import { Probability, DITTO_RATE, PoolSize, CommonShop, EpicShop, LegendaryShop, RareShop, UncommonShop } from "../types/Config"
+import {
+  Probability,
+  DITTO_RATE,
+  PoolSize,
+  CommonShop,
+  EpicShop,
+  LegendaryShop,
+  RareShop,
+  UncommonShop
+} from "../types/Config"
 import { Rarity } from "../types/enum/Game"
 import { pickRandomIn, shuffleArray } from "../utils/random"
 import { clamp } from "../utils/number"
 import { removeInArray } from "../utils/array"
 import { Pokemon } from "./colyseus-models/pokemon"
 import { logger } from "../utils/logger"
-
 
 export function getPoolSize(rarity: Rarity, maxStars: number): number {
   return PoolSize[rarity][clamp(maxStars, 1, 3) - 1]
@@ -98,12 +106,12 @@ export default class Shop {
 
   refillShop(player: Player) {
     // No need to release pokemons since they won't be changed
-    let PkmList = player.shop.map((pokemon) =>{
-      if(pokemon != Pkm.MAGIKARP && pokemon != Pkm.DEFAULT){
+    let PkmList = player.shop.map((pokemon) => {
+      if (pokemon != Pkm.MAGIKARP && pokemon != Pkm.DEFAULT) {
         return pokemon
-      } 
+      }
       return this.pickPokemon(player)
-    } )
+    })
 
     for (let i = 0; i < 6; i++) {
       player.shop[i] = PkmList[i]
@@ -195,7 +203,7 @@ export default class Shop {
     let pokemon = Pkm.MAGIKARP
     let threshold = 0
     const finals = new Array<Pkm>()
-    
+
     if (ditto_seed < DITTO_RATE) {
       return Pkm.DITTO
     }
